# rust-axum-leptos

./: .gitignore  Cargo.toml  index.html
migrations/: 20221203144810_one.sql
src/: main.rs  todo.rs
