[package]
name = "full-stack-axum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.1", optional = true }
axum-macros = "0.3.0"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
futures = "0.3.25"
gloo-net = { version = "0.2.5", features = ["http"] }
http = { version = "0.2.8", optional = true }
leptos = { version = "0.0.19", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.0.2", default-features = false, optional = true }
leptos_meta = { version = "0.0.4", default-features = false }
leptos_router = { version = "0.0.5", default-features = false }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
simple_logger = "4.0.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
tokio = { version = "1.22.0", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.3.5", features = ["fs"], optional = true }

[features]
default = ["ssr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio", "dep:http", "dep:sqlx", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_axum"]


[package.metadata.cargo-all-features]
denylist = [
	"axum",
	"tower",
	"tower-http",
	"tokio",
	"http",
	"sqlx",
	"leptos_axum",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
